<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_zero"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:text="@string/question_1_of_x"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:layout_alignParentEnd="true"
        android:text="@string/text_30_secs"
        android:textColor="@color/black"
        android:textSize="40sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ALDJA"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_above="@id/radio_group" >
    </TextView>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1"></RadioButton>

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2"></RadioButton>

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3"></RadioButton>


    </RadioGroup>


</RelativeLayout>